--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,5 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "flask==2.3",
-    "flask-sqlalchemy>=3.1.1",
-    "sqlalchemy-stubs>=0.4",
+    "flask-sqlalchemy>=3.1.1"
 ]
