--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for test-therapy-app on 2025-06-29T17:43:12-04:00
+# fly.toml app configuration file generated for test-therapy-app on 2025-06-29T18:18:46-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -8,17 +8,20 @@ primary_region = 'iad'
 
 [build]
 
+[[mounts]]
+  source = 'database'
+  destination = '/data'
+
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
 
 [[vm]]
   size = 'shared-cpu-1x'
-
-[[mounts]]
-  source = "database"
-  destination = "/data"
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
